--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             padding: 10px;
             margin: 20px auto 0 auto;
             display: block;
-            background-color: #FFD700;
+            background-color: #002fff;
             color: #ffffff;
             border: none;
             border-radius: 5px;
